commit before applying meeting changes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -430,3 +430,14 @@ eprint = {https://doi.org/10.1287/mnsc.5.1.5}
   year={2007},
   publisher={Cambridge University Press}
 }
+
+% Resultant
+@article{Jonsson2005,
+  title={Accurate solution of polynomial equations using Macaulay resultant matrices},
+  author={Jonsson, Gubjorn and Vavasis, Stephen},
+  journal={Mathematics of computation},
+  volume={74},
+  number={249},
+  pages={221--262},
+  year={2005}
+}
