--- a/tex/medians_tests.tex
+++ b/tex/medians_tests.tex
@@ -2,9 +2,9 @@
 \toprule
 {} &  Memory one Median &  Evo Median &  p-values \\
 \midrule
-Distribution \$p\_1\$ &                0.0 &    0.000000 &       0.0 \\
-Distribution \$p\_2\$ &                0.0 &    0.174359 &       0.0 \\
-Distribution \$p\_3\$ &                0.0 &    0.000000 &       0.0 \\
-Distribution \$p\_4\$ &                0.0 &    0.000000 &       0.0 \\
+Distribution $p_1$ &                0.0 &    0.000000 &       0.0 \\
+Distribution $p_2$ &                0.0 &    0.174359 &       0.0 \\
+Distribution $p_3$ &                0.0 &    0.000000 &       0.0 \\
+Distribution $p_4$ &                0.0 &    0.000000 &       0.0 \\
 \bottomrule
 \end{tabular}
