--- a/tex/skew_table.tex
+++ b/tex/skew_table.tex
@@ -1,10 +1,10 @@
-\begin{tabular}{lrr}
+\begin{tabular}{lr}
 \toprule
-{} &  Memory one Skew &  Evo Skew \\
+{} &  Distance Skewness \\
 \midrule
-Distribution \$p\_1\$ &         1.094933 &  0.797134 \\
-Distribution \$p\_2\$ &         1.523980 &  1.607066 \\
-Distribution \$p\_3\$ &         4.219578 &  4.881982 \\
-Distribution \$p\_4\$ &         1.542853 &  2.990635 \\
+\$p\_1\$ difference &           0.220546 \\
+\$p\_2\$ difference &          -0.105648 \\
+\$p\_3\$ difference &          -7.001084 \\
+\$p\_4\$ difference &          -1.937356 \\
 \bottomrule
 \end{tabular}
